--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,3 +14,9 @@ spring:
   h2:
     console:
       enabled: true
+      path: /h2-console
+# logging:
+#   level:
+#     org:
+#       springframework:
+#         security: DEBUG
