--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,5 @@ databaseChangeLog:
       file: db/changelog/changeset/add-datefields-item.yaml
   - include:
       file: db/changelog/changeset/create-user-table.yaml
+  - include:
+      file: db/changelog/changeset/rename-table-user.yaml
